--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.5.1",
     "next": "16.0.0",
     "react": "19.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
