--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "16.0.0",
     "react": "19.2.0",
     "react-device-detect": "^2.2.3",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-player": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
